--- a/dev/DockerFileNginx
+++ b/dev/DockerFileNginx
@@ -1,8 +1,8 @@
 FROM nginx
 
 # Configuração do nginx
-RUN rm /etc/nginx/conf.d/default.conf
-COPY etc/nginx/conf.d/default.conf /etc/nginx/conf.d/
+#RUN rm /etc/nginx/conf.d/default.conf
+#COPY etc/nginx/conf.d/default.conf /etc/nginx/conf.d/
 
 # index.html
 RUN mkdir -p /var/www/html
