--- a/dev/DockerFileBackend
+++ b/dev/DockerFileBackend
@@ -5,7 +5,8 @@ ENV PYTHONUNBUFFERED=1
 
 WORKDIR /api
 
-RUN pip install --upgrade pip
-RUN pip install Django==4.0.2
-RUN pip install djangorestframework==3.13.1
-RUN pip install djangorestframework-simplejwt==5.0.0
+RUN pip3 install --upgrade pip
+RUN pip3 install Django==4.0.2
+RUN pip3 install djangorestframework==3.13.1
+RUN pip3 install djangorestframework-simplejwt==5.0.0
+RUN pip3 install ipdb ipython django-extensions
