--- a/dev/etc/nginx/conf.d/default.conf
+++ b/dev/etc/nginx/conf.d/default.conf
@@ -6,9 +6,18 @@ server {
     ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
     ssl_dhparam /etc/ssl/certs/dhparam.pem;
 
-    location / {
-        autoindex on;
-        autoindex_exact_size on;
-        try_files $uri /index.html;
+    # Django
+    location /api {
+        proxy_pass http://172.17.0.3:8000/api;
     }
+
+    location / {
+        proxy_pass http://172.17.0.2:3000;
+    }
+
+    # location / {
+    #     autoindex on;
+    #     autoindex_exact_size on;
+    #     try_files $uri /index.html;
+    # }
 }
