--- a/dev/etc/nginx/conf.d/default.conf
+++ b/dev/etc/nginx/conf.d/default.conf
@@ -8,11 +8,14 @@ server {
 
     # Django
     location /api {
-        proxy_pass http://172.17.0.3:8000/api;
+        proxy_pass http://backendproj01.ucs.br:8000/api;
     }
 
+
+    # Reajctjs
     location / {
-        proxy_pass http://172.17.0.2:3000;
+        #proxy_pass http://172.18.0.3:3000;
+        proxy_pass http://frontendproj01.ucs.br:3000;
     }
 
     # location / {
