--- a/dev/etc/nginx/conf.d/default.conf
+++ b/dev/etc/nginx/conf.d/default.conf
@@ -10,7 +10,9 @@ server {
     location /api {
         proxy_pass http://backendproj01.ucs.br:8000/api;
     }
-
+    location /staticdj {
+        proxy_pass http://backendproj01.ucs.br:8000;
+    }
 
     # Reajctjs
     location / {
